# crypkit-tracker

./: .dockerignore  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: a8c4e573f507_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: coins.py  portfolio.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/repositories/: portfolio_repository.py
backend/app/schemas/: models.py
backend/app/services/: coingecko.py  portfolio.py  redis_cache.py
backend/app/utils/: decimal_utils.py  logger.py  rate_limiter.py
backend/scripts/: run_tests.bat  run_tests.sh  setup_local_dev.bat  setup_local_dev.sh
backend/tests/: conftest.py  test_models.py
backend/tests/test_api/: test_coins_api.py  test_portfolio_api.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: CoinSearch.tsx  Header.tsx  Portfolio.tsx
frontend/src/components/portfolio/: CoinDetailsManager.tsx  CoinInfoCard.tsx  EditAmountField.tsx  PortfolioChart.tsx  PortfolioList.tsx  PortfolioStats.tsx
frontend/src/services/: api.ts
frontend/src/types/: coin.ts  portfolio.ts
